# ChangeLog for sys-apps/keyutils
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/keyutils/ChangeLog,v 1.39 2014/01/18 04:49:23 vapier Exp $

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> keyutils-1.5.5.ebuild,
  keyutils-1.5.8.ebuild:
  Add arm64 love.

  04 Jan 2014; Robin H. Johnson <robbat2@gentoo.org>
  -files/keyutils-1.5.3-makefile-fixup.patch:
  Missed a file cleanup.

  04 Jan 2014; Robin H. Johnson <robbat2@gentoo.org>
  -files/keyutils-1.2-makefile-fixup.patch, -keyutils-1.0.ebuild,
  -keyutils-1.1.ebuild, -keyutils-1.2-r1.ebuild, -keyutils-1.2-r2.ebuild,
  -keyutils-1.2.ebuild, -keyutils-1.4-r1.ebuild, -keyutils-1.4.ebuild,
  -keyutils-1.5.3.ebuild:
  Clean up old versions, stable has been in the tree for 11 months.

*keyutils-1.5.8 (04 Jan 2014)

  04 Jan 2014; Robin H. Johnson <robbat2@gentoo.org> +keyutils-1.5.8.ebuild,
  keyutils-1.5.5.ebuild:
  Version bump, also fix bug #484452 (AR) and bug #421531 (checking kernel
  config).

  01 Jul 2012; Raúl Porcel <armin76@gentoo.org> keyutils-1.5.5.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #417445

  05 Jun 2012; Brent Baude <ranger@gentoo.org> keyutils-1.5.5.ebuild:
  Marking keyutils-1.5.5 ppc64 for bug 417445

  30 May 2012; Markus Meier <maekke@gentoo.org> keyutils-1.5.5.ebuild:
  arm stable, bug #417445

  29 May 2012; Brent Baude <ranger@gentoo.org> keyutils-1.5.5.ebuild:
  Marking keyutils-1.5.5 ppc for bug 417445

  29 May 2012; Jeroen Roovers <jer@gentoo.org> keyutils-1.5.5.ebuild:
  Stable for HPPA (bug #417445).

  25 May 2012; Agostino Sarubbo <ago@gentoo.org> keyutils-1.5.5.ebuild:
  Stable for amd64, wrt bug #417445

  25 May 2012; Jeff Horelick <jdhore@gentoo.org> keyutils-1.5.5.ebuild:
  marked x86 per bug 417445

  25 May 2012; Mike Frysinger <vapier@gentoo.org> keyutils-1.5.5.ebuild:
  Make the tests work reliably #405293 by Patrick Lauer.

*keyutils-1.5.5 (21 Feb 2012)
