@@ -4,24 +4,20 @@ Hash: SHA256
 AUX keyutils-1.5.5-makefile-fixup.patch 879 SHA256 b68e7fab7293c680e5f44f3b116622b2d7dba2039e849ec53ab577c4e12f3a5b SHA512 d3628be5cd759fd59e3fb07897db2f23615cc4b2b12d537438c4c186e5588d8d7c22438fdb26003be29ace4910db24a889d4e35550b74a91958a4fcb4bc654c0 WHIRLPOOL 69a9ec2b8386e39c6c133395b96b7a50cc12e1a4644ce06198f4a77431b685e0e962938b97c7a757074beae8794ceafc9f36cf270064b855f91db0c91475ba1e
 DIST keyutils-1.5.5.tar.bz2 63397 SHA256 8fab781fb2d1450b2112a7fbfe6629522ae5a6b901f875a74a201012025a3fc5 SHA512 372a4881ca5cd679de0e6baa4e0e8c61ec8163b9259b018e1eb4db51fca68c0326d82a745abce96d22de367e88c88fa13b8afe438acfb38af799893630d3ba75 WHIRLPOOL 15c03983e18471b97e10f378d97c6e7e9ac7045c1f4721382f500cd8796f4a55575420b515b870ef94714bfb3dc62cb954e66efb2835fcb671c98d2f9ab33ae9
 DIST keyutils-1.5.8.tar.bz2 64880 SHA256 6c7da37272eb39abc2ebafc9ba4a580d7cf8725b61e1db21e508de7ab24b819c SHA512 f69b1acd3bff2a821ce31c6a772eea68dfbe57bb1d6128fa344ab9688c9110733b1432176e42b67648ff3a01200f4adbb92e4577132539b4c4af817027ed8f19 WHIRLPOOL e4c8d18c8ea48346a759f0e379a2bb3e6faf30f9c4a4b794485a612e25bbe86a81833e68e28b2def668faa4ff41d476ed5a6cbf105ef76bb31a02169b879f9b6
+DIST keyutils-1.5.9.tar.bz2 74683 SHA256 4da2c5552c688b65ab14d4fd40fbdf720c8b396d8ece643e040cf6e707e083ae SHA512 d4ee1dabb87844e18bfd8d094a5bc9ce792c96720b71e77961b6c36bb1addb9acea2a7004ddfba1d09b167af908368162312e5c3656b22a6266955bb57b887e2 WHIRLPOOL 0509cce076a32d2f319f596506d4aaeb83e1853ee6337e6a3041e6957e9098f4482ae56a9c6455605b72b3f34701a890e9be666b6fdd752ff14a3d3564dcba19
 EBUILD keyutils-1.5.5.ebuild 2161 SHA256 e66586007b06f8a0ae6f3c515bdfed3efb95e2b1e54de4d6ee8b795d09d7a47f SHA512 dec3f3c4afae48898ce6713473d2d92e128d5f20961c88dc2341300e688afe6d93bab1e03e2b2982d8d5826147e7b001fc85986087486df6333f822bf605b49b WHIRLPOOL 60fb2820a673fedd56548aba7031c4cb435cf5bd3c2999d73012116e55daaaff3d6daa952f7c48cf3d12a17c90a01de2d21c5af0f81c3fdb1710aa51c95eec55
 EBUILD keyutils-1.5.8.ebuild 2173 SHA256 f672e30e23bccf463c1ebc0cf3aabc75420eb17294e67164d63df9d864c5bfb9 SHA512 97835426ef8916420757cf911204376acee2548fdeace07688db5970ee0356feeda48f5efaa2ec4a2a381e74b49cf4cdc30e27561802efc8c791d9ec7ced24fb WHIRLPOOL 7bc0d1a607b86d8327c26eeb8cead421fe32461ddb8b36f610a1722b032b6a643776642be5edf1c11c400bdc8666181524dc3e2676d5800d2771d1b0c7204373
-MISC ChangeLog 5554 SHA256 570cabd9697e9e73d39ee6d0cdfd424b87d0ec621a5b9c627c2aa256064d8ffa SHA512 034686a4f39283d8d2f336eeb5038566fdde0839f71644bee7332f8b5df4d75d7d9e73c6f5144f5da205599b22761a6fc2d542a94fcc489d7d0f0bc60bdd6245 WHIRLPOOL b11dcc2f61f655cd19382e3b42c79c96edbc053f64aac0527d2c352cb9d09760f12bad00e31f5ea10680f2bbee1c1bf69947b705f4de15ce8d89628b8e993ba4
+EBUILD keyutils-1.5.9.ebuild 2162 SHA256 72f2197c3ecf07656a55b0bdcf9bc799a010771f1113f9bd0f6136003145abe6 SHA512 960700b46d94d7c56ab87001f382f31f31b368cb3c6c827f033bcbf29ee6cd4e19d2b530b18a0dbd56e503436bac1d26965e09349afd5ff591c4941a63a21877 WHIRLPOOL 033f835d5f1fbdcb2bd11fbe865616156725105984e22d3514df981017dab0a963f9a734f4135dc9f31906c0f804ee76c0d2d6cbd0dfd5a50343b94e8cb42227
+MISC ChangeLog 5678 SHA256 738d4ea24ea6862b696add0a40e9f99ce65180ec0358b04132cede4440ec7a7f SHA512 5b91a892dc60d5f1b413914a7db256ca7606be5885990cccc7b0157089ddefd3450e5e5123eb639975e6dc6d76d6f55e9a0b12eabf633f35c700a19d97893b57 WHIRLPOOL c77cdde24a4978e72fdddac0da1c235fd5e7e8d3ac5d0720e23b544c4f7c15c6ec6186145240d643c32e720fd0ad80eb192b3c159486740bf89982b4f4ef5d76
 MISC metadata.xml 227 SHA256 eb6179099f91f31168c95bd4a018a01f37aa1eb8d9ba8d3ed039056bac71bcf8 SHA512 1e52da091741cb67f6a61955ebf0c314c3634d5cab187a27820fa76f36307cb9c404271360de061f9b2076dfa1e4f3fadb46a3834ad9fc6685fbc437e5c7c789 WHIRLPOOL 0baafc1e244b376dc66e10952a10ec634fabb384431da1bec9be95bb344109c7943c6e74ae249070a9c5ee93410714e2c9343a65e01309bac7918239b6492820
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS2gfaAAoJEPGu1DbS6WIA3oIP/0bfcYgCWlQtxSYCTiGogKAm
-zUmgjFH2D2I/w6uu+rK71MT9Mh7o/X0k2BV+1HJcjMIsluFtpO7Dll/Tht19bUho
-+OJYo8gt0f8G0GQAT8IMP79+vTUE4HWA2jXc7W6xzf8uuxhH+wNQu9f32i6Ly5q/
-aAcB9ofV/MW1b5u4lnOtH/P+H/n06JTbHRvX1gwYtxCHNoe6eC9xylWvWfCvFfxH
-P1U1FzX3Mpea2GSStS+jdajn/FQCTWMVmbL7vODrf+UdxYWA/B3P9XTq00bdEuUY
-P8DW0dEZ5/vdZK682JUjXu7hbvTH3J2tsIIaS0Jn/nOHDb6sxsOBSVXeW84du2Wd
-1DpR9HtnS/gnALBRrGVb6QsSp6k2nlBUVdKovVQGBd09y9SpzWS3s1pVwsDfMKDV
-yCThLtxlyX5UHKITTx6GUFrN/h5NVee9L/iKR/z7Xnyv6gkVA9KrtFq7B48efD4Z
-ZIS4/xgl1+SZX4tsDV/lZ086PPg1udxo8ptoX1h6Vi875lfLS/BL2KqOok1UXJke
-+MAtXOATdf0r0y44tLlPLHy2U9IkDbS8lSxbwpUTHubl2hAj9DkIOIDNRkICMq5P
-sRfQxFoPuUC6NVfOWZvp3gcq/dSbIPjJexu7Qjnu3Vrosh50MKWLQeA52P0yXsy8
-8X6MvHiYkvF845xHyN7m
-=3rel
+iQEcBAEBCAAGBQJTEWXGAAoJEEqz6FtPBkyj8YoH/1Ce6LQDnpeEI3NBBgum3nMD
+5QTXOwyQne89uezU6uTlLhLNunbvcDRKoMvLmUPfhUsx6uCjsFhGeEV7S9wB7Etv
+obt9OyKgPusqR7T/Ba/qwTEYAnlVOoISi+EOaDr5PhjEzI1uSqb2cD75CYhbjj7q
+WXj7c9ACsH526BtHwrVDpd9STeYkM0jc6PaXNQUY6ykUEDebAkut5qzvZLUby++H
+pPuzEEvmzMxUVIkk3yyEQtA/+XEfI8MclkVbvYMYdUyC0u1YDzrjjr/oznCEwyDB
+yJPczX8pVomiRRm4MF4agDaRZWsNSSoTiHL6sIDUkveoTqlSh1my3nfW5iazWi0=
+=ZRnv
 -----END PGP SIGNATURE-----
